# end-to-end-mlops-system

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: insurance_weekly_pipeline_minimal.py
artifacts/: BIC_linear.joblib  BIC_scaler.joblib  BMI_linear.joblib  BMI_scaler.joblib  BVH_linear.joblib  BVH_scaler.joblib  MIG_linear.joblib  MIG_scaler.joblib  PGI_linear.joblib  PGI_scaler.joblib
data/processed/: BIC_weekly_clean.csv.dvc  BMI_weekly_clean.csv.dvc  BVH_weekly_clean.csv.dvc  MIG_weekly_clean.csv.dvc  PGI_weekly_clean.csv.dvc  insurance_hose_ohlcv_10years.csv
data/raw/: insurance_hose_ticket_name.csv  insurance_stocks_weekly_10y.csv.dvc
docker/api/: Dockerfile
docker/mlflow/: Dockerfile
docs/: chatbot-github-structure.md  mlops-proposal.md  model-training-guide.md  note-project.md
notebooks/: fetch_insurance_ohlcv_data.ipynb  inspect_data_vnstock.ipynb  processed_data.ipynb  training.ipynb
src/api/: api.py
src/ingest/: vnstock_client.py
src/monitoring/grafana-setup/: Dockerfile  grafana_setup.py
src/monitoring/prometheus/: prometheus.yml
src/monitoring/promptail/: promtail-config.yaml
src/preprocess/: processed_data.py
src/training/: training.py
src/utils/: fix_perms.sh  promote_best_models.py  upload_processed_to_gcs.py
tests/: test_api_endpoints.py  test_gcs_buckets_paths.py
