[project]
name = "mlops-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc[all]>=3.64.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "mlflow>=3.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "vnstock>=3.3.0",
]
